client/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

.container{
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.background-picker{
  position: absolute;
  top: 0;
  left: 0;
  width: 25%;
  height: 3rem;
  display: flex;
  flex-direction: row;
}

.background-choice{
  width: 2rem;
  height: 2rem;
  border-radius: 999px;
  margin: 0.5rem;
  border: 2px solid black;
  cursor: pointer;
}

.active-theme{
  border: 2px dotted black;
}

#name-picker{
  width: 15rem;
}

#name-form{
  flex-direction: column;
}

#name-form input{
  height: 2rem;
  padding: 0 0.2rem;
}

.name-form-submit{
  margin-top: 1rem;
}

#chat-window{
  width: 45rem;
  height: 25rem;
  display: none;
  flex-direction: row;
  position: relative;
  outline: 2px solid black;
  animation-name: none;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
}

.chat{
  flex-direction: column;
  width: 70%;
  height: 100%;
}

.top-bar{
  height: 10%;
  width: 100%;
  font-size: 2rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: absolute;
  top: -10%;
  left: 0;
  background-color: rgb(109, 219, 255);
  outline: 2px solid black;
}

.messages{
  width: 100%;
  height: 90%;
  background-color: white;
  
}

form{
  height: 10%;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

input{
  width: 100%;
  height: 100%;
}

button{
  width: 4rem;
  border-radius: 0;
  border: 1px solid grey;
}

.smiley-toggle{
  position: relative;
  width: 4rem;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #EFEFEF;
  border: 1px solid grey;
  color: black;
  text-decoration: none;
  user-select: none;
}

.smiley-menu{
  display: none;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: absolute;
  bottom: 105%;
  left: -2.5rem;
  background-color: #EFEFEF;
  width: 12rem;
  flex-wrap: wrap;
  border: 1px solid grey;
}

.smiley{
  flex: 1 1 1rem;
  font-size: 1.7rem;
}

.nudge{
  width: 4rem;
  height: 100%;
  background-color: #EFEFEF;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid grey;
  color: black;
  text-decoration: none;
  user-select: none;
}

#message-list{
  list-style-type: none;
  height: 100%;
  overflow: auto;
  padding: 0.5rem;
  overflow-wrap: break-word;
}

#message-input{
  padding: 0 0.2rem;
}

.message-highlight{
  background-color: lightcoral;
}

.online{
  width: 30%;
  height: 100%;
  background-color: white;
}

.online-list{
  width: 100%;
  height: 100%;
  list-style-type: none;
  font-size: 2rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-left: 2px solid grey;
}

.online-list li::before {
  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
  color: green; /* Change the color */
  font-weight: bold; /* If you want it to be bold */
  display: inline-block; /* Needed to add space between the bullet and the text */
  width: 0.5em; /* Also needed for space (tweak if needed) */
  margin-left: 0.5rem; /* Also needed for space (tweak if needed) */
  font-size: 2rem;
}

@keyframes nudge {
  0% {transform: translate(-5%, -2%);}
  10% {transform: translate(5%, 2%);}
  20% {transform: translate(-5%, -2%);}
  30% {transform: translate(5%, 2%);}
  40% {transform: translate(-5%, -2%);}
  50% {transform: translate(5%, 2%);}
  60% {transform: translate(-5%, -2%);}
  70% {transform: translate(5%, 2%);}
  80% {transform: translate(-5%, -2%);}
  90% {transform: translate(5%, 2%);}
  100% {transform: translate(-5%, -2%);}
}

@media screen and (max-width: 730px){

  .container{
    overflow: hidden;
  }

  #chat-window{
    flex-direction: column;
    position: absolute;
    top: 10%;
    left: 0;
    height: 100%;
    width: 100%;
  }

  .chat{
    width: 100%;
  }

  .online{
    width: 100%;
    height: 50%;
  }

  .online-list{
    border: none;
  }

  #message-form{
    border: 2px solid grey;
  }

  .background-picker{
    display: none;
  }
}

